@@ -1,3 +1,15 @@
+2004-07-05  Mark McLoughlin  <mark@skynet.ie>
+
+	Patch from Josselin Mouette <joss@debian.org> to handle
+	SIGHUP by reloading all databases. Intended to be used
+	in package's postinst scripts to get all running gconfds
+	to reload schemas.
+
+	* gconf/gconfd.c:
+	(signal_handler): handle SIGHUP by setting flag.
+	(periodic_cleanup_timeout): reload all databases when
+	the reload flag is set.
+
 2004-07-04  Mark McLoughlin  <mark@skynet.ie>
 
 	Patch from Julio M. Merino Vidal <jmmv@menta.net> in bug #134517
